--- a/test-scss/career.html
+++ b/test-scss/career.html
@@ -169,8 +169,8 @@
     </section>
     <section class="border-bottom py-2">
         <div class="center">
-            <div class="d-flex justify-content-center flex-wrap py-3 py-md-0">
-                <div class="block d-flex flex-column py-md-5 col-12 col-md-3">
+            <div class="d-flex justify-content-center py-60_page flex-wrap">
+                <div class="block d-flex flex-column py-3 col-12 col-md-3">
                     <h1 class="f-20 mt-md-4 c-black helvetica-75 text-center mb-2">კარიერა</h1>
                     <span class="f-14 c-light-text helvetica-55 text-center">იპოვე შენთვის სასურველი ვაკანსია და
                         დასაქმდი, დასაქმდი </span>
@@ -180,7 +180,7 @@
 
         </div>
     </section>
-    <section class="details py-md-5 py-3">
+    <section class="details py-60_page">
         <div class="d-flex justify-content-between section flex-column flex-md-row align-items-start">
             <div class="left__side d-none d-md-flex flex-column  col-md-3 col-12 br-8 bc-gray-light py-3">
                 <div>
@@ -197,6 +197,7 @@
                         <span class="py-1">
                             ნებისმიერი
                         </span>
+                        <img src="./img/Path.svg" alt="">
                     </div>
                     <div class="dropdown-menu col-10 mt-2" aria-labelledby="dropdownMenuButton">
                         <div class="blcok mt-2 pointer w-100">
@@ -230,7 +231,7 @@
                 </div>
             </div>
             <div class=" left__side col-12 d-block d-md-none px-0">
-                <div class="w-100 d-flex justify-content-end px-4">
+                <div class="w-100 d-flex justify-content-end px-4 mt-n3 mt-md-0">
                     <a type="button" class="filter-drop c-black" data-toggle="collapse" data-target="#demo">ფილტრები</a>
                 </div>
                 <div class="d-flex filter__block_career flex-column px-4 bc-gray-light collapse mt-3" id="demo">
@@ -247,8 +248,8 @@
                             aria-expanded="false">
                             <span class="py-1">
                                 ნებისმიერი
+                                <img src="./img/Path.svg" alt="">
                             </span>
-                            <img src="./img/Path.svg" alt="">
                         </div>
                         <div class="dropdown-menu col-10 mt-2" aria-labelledby="dropdownMenuButton">
                             <div class="blcok mt-2 pointer w-100">
@@ -283,8 +284,8 @@
                 </div>
             </div>
             <div class="right__side col-12 px-4 px-md-0 col-md-8">
-                <div class="block border-bottom pt-3 pb-md-5 pb-3">
-                    <div class="d-flex mb-3 pb-1">
+                <div class="block border-bottom pt-3 pb-4 pb-md-3">
+                    <div class="d-flex mb-3 pb-md-1">
                         <img src="./img/career.svg" alt="">
                         <div class="d-flex flex-column pl-2">
                             <span class="f-24 c-black helvetica-75 mb-2">სენიორ დეველოპერი</span>
@@ -295,7 +296,7 @@
                     <span class="f-16 lh-24 c-light-text helvetica-55">დიდ ქართულ და საერთაშორისო კომპანიებს ვეხმარებით
                         ციფრულ ანსფორმაციაში. მათთვის ვქმნით სხვადასხვა დანიშნულების საშუალო და დიდი ზომის ციფრულ
                         პროდუქტებს.</span>
-                    <div class="d-flex mt-3 flex-wrap">
+                    <div class="d-flex mt-3 mb-md-4 pt-md-1 flex-wrap">
                         <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex align-items-center mr-3">
                             <img class="mr-2" src="./img/wach.svg" alt="">
                             <span class="f-14 c-light-text helvetica-55">Redberry</span>
@@ -310,8 +311,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="block border-bottom pt-3 pb-md-5 pb-3">
-                    <div class="d-flex mb-3 pb-1">
+                <div class="block border-bottom pt-3 pb-4 pb-md-3">
+                    <div class="d-flex mb-3 pb-md-1">
+                        <img src="./img/career.svg" alt="">
                         <div class="d-flex flex-column pl-2">
                             <span class="f-24 c-black helvetica-75 mb-2">სენიორ დეველოპერი</span>
                             <span class="f-14 c-light-text helvetica-55">Redberry</span>
@@ -321,7 +323,7 @@
                     <span class="f-16 lh-24 c-light-text helvetica-55">დიდ ქართულ და საერთაშორისო კომპანიებს ვეხმარებით
                         ციფრულ ანსფორმაციაში. მათთვის ვქმნით სხვადასხვა დანიშნულების საშუალო და დიდი ზომის ციფრულ
                         პროდუქტებს.</span>
-                    <div class="d-flex mt-3 flex-wrap">
+                    <div class="d-flex mt-3 mb-md-4 pt-md-1 flex-wrap">
                         <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex align-items-center mr-3">
                             <img class="mr-2" src="./img/wach.svg" alt="">
                             <span class="f-14 c-light-text helvetica-55">Redberry</span>
