--- a/test-scss/career_2.html
+++ b/test-scss/career_2.html
@@ -162,13 +162,15 @@
             </nav>
         </div>
     </section>
-    <div class="center py-4">
-        <button class="btn btn-light helvetica-55 f-16 d-flex align-items-center py-2"><img class="mr-2" src="./img/back.svg" alt=""> ukan</button>
+    <div class="center py-4 my-2">
+        <button class="btn btn-light helvetica-55 f-16 d-flex align-items-center py-2"><img class="mr-2"
+                src="./img/back.svg" alt=""> ukan</button>
     </div>
-    <section class="details pb-5">
+    <section class="details center pb-5">
         <div class="d-flex justify-content-between section flex-column flex-md-row-reverse align-items-start">
-            <div class="left__side d-flex flex-column align-items-center justify-content-center box-shadow col-md-4 col-lg-3 col-12 br-8 py-3">
-                <div class="d-flex mt-3 flex-wrap justify-content-between align-items-center w-100 py-1">
+            <div
+                class="right__side d-md-flex d-none flex-column align-items-center justify-content-center box-shadow col-md-4 col-lg-3 col-12 br-8 py-3">
+                <div class="d-flex flex-wrap justify-content-between align-items-center w-100 py-1">
                     <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
                         <img class="mr-2" src="./img/wach.svg" alt="">
                         <span class="f-14 c-light-text helvetica-55">Redberry</span>
@@ -187,9 +189,9 @@
                     </div>
                 </div>
             </div>
-            <div class="right__side col-12 px-4 px-md-0 col-md-7 col-lg-8">
-                <div class="block pt-3 pb-3">
-                    <div class="d-flex mb-3 pb-1">
+            <div class="left__side col-12 px-0 px-md-0 col-md-7 col-lg-8">
+                <div class="block pb-md-3">
+                    <div class="d-flex pb-4 mb-2">
                         <img src="./img/career.svg" alt="">
                         <div class="d-flex flex-column pl-2">
                             <span class="f-24 c-black helvetica-75 mb-2">სენიორ დეველოპერი</span>
@@ -197,84 +199,126 @@
                         </div>
 
                     </div>
-                    <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex mb-4">ჩვენ ვართ Redberry – ციფრული ტრანსფორმაციის სააგენტო და სტარტაპ სტუდია.</span>
-                    
-                    <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex mb-4">დიდ ქართულ და საერთაშორისო კომპანიებს ვეხმარებით ციფრულ ტრანსფორმაციაში. 
-                        მათთვის ვქმნით სხვადასხვა დანიშნულების საშუალო და დიდი ზომის ციფრულ 
+                    <div class="responsive_overlay  box-shadow br-8 px-2 py-3 mb-4">
+                        <div class="d-flex d-md-none center flex-wrap justify-content-between align-items-center w-100 py-1">
+                            <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
+                                <img class="mr-2" src="./img/wach.svg" alt="">
+                                <span class="f-14 c-light-text helvetica-55">Redberry</span>
+                            </div>
+                            <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
+                                <img class="mr-2" src="./img/location.svg" alt="">
+                                <span class="f-14 c-light-text helvetica-55">Redberry</span>
+                            </div>
+                            <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
+                                <img class="mr-2" src="./img/full.svg" alt="">
+                                <span class="f-14 c-light-text helvetica-55">Redberry</span>
+                            </div>
+                            <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
+                                <img class="mr-2" src="./img/wallet.svg" alt="">
+                                <span class="f-14 c-light-text helvetica-55">Redberry</span>
+                            </div>
+                        </div>
+                    </div>
+                    <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex mb-4 pb-md-2">ჩვენ ვართ Redberry –
+                        ციფრული ტრანსფორმაციის სააგენტო და სტარტაპ სტუდია.</span>
+
+                    <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex mb-4 pb-md-2">დიდ ქართულ და საერთაშორისო
+                        კომპანიებს ვეხმარებით ციფრულ ტრანსფორმაციაში.
+                        მათთვის ვქმნით სხვადასხვა დანიშნულების საშუალო და დიდი ზომის ციფრულ
                         პროდუქტებს.</span>
-                    <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">ჩვენი სტარტაპ სტუდია კი ქმნის ბაზრისთვის ინოვაციური ბიზნეს მოდელის მქონე 
-                        ტექნოლოგიებზე დაფუძნებულ სტარტაპებს. აწვდის მათ როგორც seed დაფინანსებას, 
-                        ასევე ტექნიკურ, მარკეტინგულ, პროდუქტის დიზაინისა და ბიზნესის განვითარებისთვის 
+                    <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex pb-3">ჩვენი სტარტაპ სტუდია კი ქმნის
+                        ბაზრისთვის ინოვაციური ბიზნეს მოდელის მქონე
+                        ტექნოლოგიებზე დაფუძნებულ სტარტაპებს. აწვდის მათ როგორც seed დაფინანსებას,
+                        ასევე ტექნიკურ, მარკეტინგულ, პროდუქტის დიზაინისა და ბიზნესის განვითარებისთვის
                         საჭირო ადამიანურ რესურსს.</span>
                 </div>
-                <div class="block list__type pt-3 pb-3">
-                    <span class="f-16 c-black helvetica-75 mb-3 d-flex">ძირითადი მოვალეობები:</span>
+                <div class="block list__type pt-md-3 pb-2 pb-md-4 mb-2">
+                    <span class="f-16 c-black helvetica-75 mb-3 pb-md-2 pb-0 d-flex">ძირითადი მოვალეობები:</span>
 
                     <ul>
                         <li class="d-flex">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">Backend სერვისების იმპლემენტაცია;</span>
+                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">Backend სერვისების
+                                იმპლემენტაცია;</span>
                         </li>
                         <li class="d-flex">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">კომპლექსურ არქიტექტურებთან მუშაობა;</span>
+                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">კომპლექსურ არქიტექტურებთან
+                                მუშაობა;</span>
                         </li>
                         <li class="d-flex">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">Performance ოპტიმიზაციების გაკეთება;</span>
+                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">Performance ოპტიმიზაციების
+                                გაკეთება;</span>
                         </li>
                         <li class="d-flex">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სხვადასხვა ფართოდ-გამოყენებადი სერვისების ინტეგრაცია;</span>
+                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სხვადასხვა
+                                ფართოდ-გამოყენებადი სერვისების ინტეგრაცია;</span>
                         </li>
                         <li class="d-flex">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">ეფექტიანი, მრავალჯერ გამოყენებადი და დოკუმენტირებული კოდის წერა;</span>
+                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">ეფექტიანი, მრავალჯერ
+                                გამოყენებადი და დოკუმენტირებული კოდის წერა;</span>
                         </li>
                         <li class="d-flex">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">გუნდის წევრებთან ეფექტური კომუნიკაცია.</span>
+                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">გუნდის წევრებთან ეფექტური
+                                კომუნიკაცია.</span>
                         </li>
                     </ul>
                 </div>
-                <div class="block list__type pt-3 pb-5">
-                    <span class="f-16 c-black helvetica-75 mb-3 d-flex">ძირითადი მოვალეობები:</span>
+                <div class="block list__type pt-md-3 pb-2">
+                    <span class="f-16 c-black helvetica-75 mb-3 pb-md-2 pb-0 d-flex">ძირითადი მოვალეობები:</span>
 
                     <ul>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">Backend სერვისების იმპლემენტაცია;</span>
+                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">Backend სერვისების
+                                იმპლემენტაცია;</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">WEB ფრეიმვორქებთან მუშაობის გამოცდილება: Laravel, Symfony, Django, Flask</span>
+                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">WEB ფრეიმვორქებთან მუშაობის
+                                გამოცდილება: Laravel, Symfony, Django, Flask</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">Git ვერსიის კონტროლის სისტემის გამოყენების ცოდნა</span>
+                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">Git ვერსიის კონტროლის
+                                სისტემის გამოყენების ცოდნა</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">HTTP პროტოკოლის მუშაობის პრინციპები, სასურველია apache ან nginx-თან მუშაობის გამოცდილება</span>
+                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">HTTP პროტოკოლის მუშაობის
+                                პრინციპები, სასურველია apache ან nginx-თან მუშაობის გამოცდილება</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია ტესტები წერის გამოცდილება. ტესტ ფრეიმვორქების ცოდნა: PHPUnit, unittest, pytest…</span>
+                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია ტესტები წერის
+                                გამოცდილება. ტესტ ფრეიმვორქების ცოდნა: PHPUnit, unittest, pytest…</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია Github actions CI/CD ფაიფლაინთან მუშაობის გამოცდილება</span>
+                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია Github actions
+                                CI/CD ფაიფლაინთან მუშაობის გამოცდილება</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">HTTP პროტოკოლის მუშაობის პრინციპები, სასურველია apache ან nginx-თან მუშაობის გამოცდილება</span>
+                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">HTTP პროტოკოლის მუშაობის
+                                პრინციპები, სასურველია apache ან nginx-თან მუშაობის გამოცდილება</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია ტესტები წერის გამოცდილება. ტესტ ფრეიმვორქების ცოდნა: PHPUnit, unittest, pytest…</span>
+                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია ტესტები წერის
+                                გამოცდილება. ტესტ ფრეიმვორქების ცოდნა: PHPUnit, unittest, pytest…</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია Github actions CI/CD ფაიფლაინთან მუშაობის გამოცდილება</span>
+                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია Github actions
+                                CI/CD ფაიფლაინთან მუშაობის გამოცდილება</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">HTTP პროტოკოლის მუშაობის პრინციპები, სასურველია apache ან nginx-თან მუშაობის გამოცდილება</span>
+                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">HTTP პროტოკოლის მუშაობის
+                                პრინციპები, სასურველია apache ან nginx-თან მუშაობის გამოცდილება</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია ტესტები წერის გამოცდილება. ტესტ ფრეიმვორქების ცოდნა: PHPUnit, unittest, pytest…</span>
+                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია ტესტები წერის
+                                გამოცდილება. ტესტ ფრეიმვორქების ცოდნა: PHPUnit, unittest, pytest…</span>
                         </li>
                         <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია Github actions CI/CD ფაიფლაინთან მუშაობის გამოცდილება</span>
+                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია Github actions
+                                CI/CD ფაიფლაინთან მუშაობის გამოცდილება</span>
                         </li>
                     </ul>
                 </div>
-                <div class=" box-shadow w-100 d-flex p-3 br-8 flex-column flex-sm-row">
-                    <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> To apply for this job email your details to</span> 
+                <div class=" box-shadow w-100 d-flex mt-4 p-3 br-8 flex-column flex-sm-row">
+                    <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> To apply for this job email your
+                        details to</span>
                     <a class="f-16 lh-24 c-blue helvetica-55 lh-24 d-flex ml-0 ml-sm-1">hello@redberry.ge</a>
 
                 </div>
