--- a/test-scss/career_2.html
+++ b/test-scss/career_2.html
@@ -199,8 +199,8 @@
                         </div>
 
                     </div>
-                    <div class="responsive_overlay  box-shadow br-8 px-2 py-3 mb-4">
-                        <div class="d-flex d-md-none center flex-wrap justify-content-between align-items-center w-100 py-1">
+                    <div class="responsive_overlay d-md-none  box-shadow br-8 px-2 py-3 mb-4">
+                        <div class="d-flex  center flex-wrap justify-content-between align-items-center w-100 py-1">
                             <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
                                 <img class="mr-2" src="./img/wach.svg" alt="">
                                 <span class="f-14 c-light-text helvetica-55">Redberry</span>
