--- a/test-scss/contact.html
+++ b/test-scss/contact.html
@@ -166,7 +166,7 @@
             </nav>
         </div>
     </section>
-    <section class="m-h-def-2 py-md-5 py-3">
+    <section class="m-h-def-2 py-60">
         <div class="center d-flex align-items-stretch justify-content-between flex-column flex-md-row">
             <div class="left__side col-12 col-md-6 col-lg-5 px-0 px-md-2">
                 <span class="f-28 lh-19 c-black helvetica-75 d-flex mb-3">მოგვწერეთ</span>
