--- a/test-scss/mediakit.html
+++ b/test-scss/mediakit.html
@@ -147,7 +147,8 @@
                 <ul class="d-flex align-items-center">
                     <li class="list mr-4 d-flex align-items-center">
                         <a href="about-us.html"
-                            class="nav__a c-light-text c-hover-blue keep-all transition helvetica-75 keep-all">ჩვენ შესახებ</a>
+                            class="nav__a c-light-text c-hover-blue keep-all transition helvetica-75 keep-all">ჩვენ
+                            შესახებ</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
                         <a href="mediakit.html"
@@ -177,21 +178,18 @@
                     </div>
                 </div>
                 <div class="right__side col-12 col-lg-7 pl-0 mt-5 mt-md-0">
-                    <span class="helvetica-75 d-inline-block mb-3 f-40 c-black">Downloads & Media Kit</span>
+                    <span class="helvetica-75 d-inline-block mb-md-4 mb-3 f-40 c-black">Downloads & Media Kit</span>
                     <span class="helvetica-55 d-inline-block lh-24 f-16 c-blue">Grab our official Digitaledu brand
                         resources and learn about usage guidelines.</span>
-                    <!-- <div class="block d-flex d-md-none py-3">
-                            <img class="w-100" src="./img/Artboard-1.png" alt="">
-                        </div> -->
                 </div>
             </div>
         </div>
     </div>
 
 
-    <section class="join__us py-5">
-        <div class="center d-flex flex-column mb-4">
-            <span class="helvetica-75 d-inline-block mb-2 f-30 c-black">Downloads</span>
+    <section class="join__us py-60">
+        <div class="center d-flex flex-column mb-md-4 mb-3">
+            <span class="helvetica-75 d-inline-block mb-md-4 mb-2 f-30 c-black">Downloads</span>
             <span class="helvetica-55 d-inline-block f-16 c-light-text">We’ve provided vector versions of our logo and
                 mark for certain uses listed below.</span>
         </div>
@@ -201,7 +199,7 @@
                 <div
                     class="d-flex align-items-center flex-column flex-md-row justify-content-between col-md-8 col-lg-6 pt-5 pb-md-0 pt-md-3">
                     <div class="left__side d-flex flex-column align-items-center">
-                        <img class="mb-4" src="./img/download_1.svg" alt="">
+                        <img class="mb-md-4 mb-2 pb-3" src="./img/download_1.svg" alt="">
                         <span class="f-12 c-black helvetica-75">Academy logo</span>
                         <div class="formats d-flex align-items-center mt-3">
                             <span class="f-12 c-light-text helvetica-55 border br-3 lh-20 px-2 mx-1">SVG</span>
@@ -212,7 +210,7 @@
                         </div>
                     </div>
                     <div class="right__side d-flex flex-column align-items-center mt-5 mt-md-0">
-                        <img class="mb-4" src="./img/donwload.svg" alt="">
+                        <img class="mb-md-4 mb-2 pb-3" src="./img/donwload.svg" alt="">
                         <span class="f-12 c-black helvetica-75">Academy logo</span>
                         <div class="formats d-flex align-items-center mt-3">
                             <span class="f-12 c-light-text helvetica-55 border br-3 lh-20 px-2 mx-1">SVG</span>
@@ -223,7 +221,9 @@
                         </div>
                     </div>
                 </div>
-                <button class="blue-button f-14 my-4 mx-auto">კურსები</button>
+                <div class="pb-2 pt-md-0 pt-2">
+                    <button class="blue-button f-14 mt-md-5 mt-4 mb-3 mx-auto">კურსები</button>
+                </div>
             </div>
         </div>
     </section>
@@ -235,49 +235,50 @@
     <section class="colors pb-5">
         <div class="center d-flex justify-content-between flex-column flex-md-row">
             <div class="left__side position-relative d-flex flex-column col-12 col-md-6 p-0">
-                <span class="helvetica-75 d-inline-block mb-2 f-30 c-black">ფერები</span>
+                <span class="helvetica-75 d-inline-block mb-4 f-30 c-black">ფერები</span>
                 <span class="helvetica-55 d-inline-block f-16 c-light-text">ციფრული აკადეიმიის ლოგოს ფერები და მისი
                     გამოყენების წესები</span>
-                <div class="color-block mt-4">  
-                    <div class="f-16 bc-blue helvetica-55 c-white py-md-5 px-2 py-4 text-center lh-10 br-8">
+                <div class="color-block mt-3">
+                    <div class="color-texts bc-blue helvetica-55 c-white py-md-5 px-2 py-4 text-center lh-10 br-8">
                         #6595FF
                     </div>
-                    <span class="f-14 c-light-text helvetica-55 d-block pt-4 text-center">ლურჯი</span>
+                    <span class="f-14 c-light-text helvetica-55 d-block pt-2 text-center">ლურჯი</span>
                 </div>
-                <div class="d-flex align-items-center flex-nowrap mt-4 overflow-auto">
+                <div class="d-flex align-items-center flex-nowrap pb-3 pb-md-0 mt-4 overflow-auto">
                     <div class="color-block mr-3 w-100">
-                        <div class="f-16 bc-purple helvetica-55 c-white py-md-5 px-2 py-4 text-center lh-10 br-8">
+                        <div class="color-texts bc-purple helvetica-55 c-white py-md-5 px-2 py-4 text-center lh-10 br-8">
                             #9F33FF
                         </div>
-                        <span class="f-14 c-light-text helvetica-55 d-block pt-4 text-center">იასანისფერი</span>
+                        <span class="f-14 c-light-text helvetica-55 d-block pt-2 text-center">ცისფერი</span>
                     </div>
                     <div class="color-block mr-3 w-100">
-                        <div class="f-16 bc-light-blue helvetica-55 c-white py-md-5 px-2 py-4 text-center lh-10 br-8">
+                        <div class="color-texts bc-light-blue helvetica-55 c-white py-md-5 px-2 py-4 text-center lh-10 br-8">
                             #22AAFF
                         </div>
-                        <span class="f-14 c-light-text helvetica-55 d-block pt-4 text-center">ცისფერი</span>
+                        <span class="f-14 c-light-text helvetica-55 d-block pt-2 text-center">ცისფერი</span>
                     </div>
                     <div class="color-block mr-3 w-100">
-                        <div class="f-16 bc-yellow helvetica-55 c-white py-md-5 px-2 py-4 text-center lh-10 br-8">
+                        <div class="color-texts bc-yellow helvetica-55 c-white py-md-5 px-2 py-4 text-center lh-10 br-8">
                             #FFCD00
                         </div>
-                        <span class="f-14 c-light-text helvetica-55 d-block pt-4 text-center">ყვითელი</span>
+                        <span class="f-14 c-light-text helvetica-55 d-block pt-2 text-center">ყვითელი</span>
                     </div>
                     <div class="color-block mr-3 w-100">
-                        <div class="f-16 bc-red helvetica-55 c-white py-md-5 px-2 py-4 text-center lh-10 br-8">
+                        <div class="color-texts bc-red helvetica-55 c-white py-md-5 px-2 py-4 text-center lh-10 br-8">
                             #FF5D31
                         </div>
-                        <span class="f-14 c-light-text helvetica-55 d-block pt-4 text-center">წითელი</span>
+                        <span class="f-14 c-light-text helvetica-55 d-block pt-2 text-center">წითელი</span>
                     </div>
                 </div>
                 <span class="scroll__overlay bc-white"></span>
             </div>
-            <div class="right__side d-flex flex-column col-12 col-md-5">
+            <div class="right__side d-flex flex-column col-12 col-md-5 px-0">
                 <div class="block mt-4">
                     <div class="bc-black br-8 d-flex align-items-center justify-content-center py-5">
                         <img class="my-4" src="./img/white-download_1.svg" alt="">
                     </div>
-                    <span class="f-14 c-light-text helvetica-55 d-block pt-2 text-center">მუქ ფონზე გამოიყენეთ თეთრი ფერის ლოგო</span>
+                    <span class="f-14 c-light-text helvetica-55 d-block pt-2 text-center">მუქ ფონზე გამოიყენეთ თეთრი
+                        ფერის ლოგო</span>
 
                 </div>
 
@@ -286,7 +287,8 @@
                     <div class="bc-banner br-8 d-flex align-items-center justify-content-center py-5">
                         <img class="my-4" src="./img/download_1.svg" alt="">
                     </div>
-                    <span class="f-14 c-light-text helvetica-55 d-block pt-2 text-center">ღია ფონზე გამოიყენეთ ლურჯი (#5086FF) ფერი</span>
+                    <span class="f-14 c-light-text helvetica-55 d-block pt-2 text-center">ღია ფონზე გამოიყენეთ ლურჯი
+                        (#5086FF) ფერი</span>
 
                 </div>
             </div>
